nobase_dist_pkgdata_DATA=\
maos/TMT_CurDesign.bin.gz\
maos/KECK.bin.gz\
maos/NapMean.bin.gz\
maos/M3.conf\
maos/aper_tmt.conf\
maos/atm_mk13n25p.conf\
maos/atm_mk13n50p.conf\
maos/atm_scao.conf\
maos/atm_srd.conf\
maos/dbg.conf\
maos/dm_dual.conf\
maos/dm_single.conf\
maos/fov_oa.conf\
maos/fov_iris.conf\
maos/llt_CL.conf\
maos/mcao_ngs.conf\
maos/nfiraos.conf\
maos/nfiraos45.conf\
maos/recon.conf\
maos/scao_base.conf\
maos/scao_lgs.conf\
maos/scao_ngs.conf\
maos/sim.conf\
maos/wfs_multi_lgs.conf\
maos/wfs_single_lgs.conf\
maos/wfs_single_ngs.conf\
maos/skyc_10.conf\
maos/skyc_20.conf\
maos/keck_lgs.conf\
skyc/maos.conf\
skyc/skyc.conf\
skyc/PSD_NGS.bin.gz\
skyc/PSD_PS.bin.gz\
skyc/PSD_TMT_WindShake20mas.bin.gz\
skyc/PSD_TT.bin.gz\
skyc/besancon/JH_5sqdeg_lat90_lon200_besancon.bin.gz
