AM_CFLAGS=$(OPTS) -I $(top_srcdir)
AM_LDFLAGS=$(LDOPTS)
nobase_include_HEADERS=types.h skyc.h utils.h skysim.h powfs.h aster.h photon.h physim.h  mtch.h nafocus.h genstars.h genpistat.h star.h
bin_PROGRAMS=../bin/skyc 
___bin_skyc_SOURCES=parms.h parms.c skyc.c utils.c skysim.c powfs.c aster.c photon.c physim.c mtch.c nafocus.c genstars.c genpistat.c  star.c 
___bin_skyc_LDADD=../lib/libaos.la $(LDEXE_FULL)
